Fixed contact-section overlapping issues;

--- a/landing/app/assets/stylesheets/basic.css
+++ b/landing/app/assets/stylesheets/basic.css
@@ -580,12 +580,12 @@ ul.highlight {
 
 #contact-left {
 /*	margin-left: 30%;*/
-	width: 40%;
+	width: 15.6em;
 }
 
 #contact-right {
 /*	margin-right: 30%;*/
-	width: 40%;
+	width: 14.8em;
 }
 
 #contact-section {
